feat: Align project with natural language syntax for IDKs
This commit aligns the project with the new direction of using a natural
language syntax for the IDK expansion engine.

The following changes are included:

- Update the research document, roadmap, and technical specification to
  reflect the new verb-based syntax.
- Update the IDK YAML files to a new schema that supports compositional
  prompts.
- Create a new CLI tool that can parse the new syntax and expand IDKs.
- Create new tests for the CLI tool.
- Update the examples to reflect the new syntax.
- Create an ADR to document the decision to move to a natural language
  syntax.

--- a/idks/001_user_authentication.yaml
+++ b/idks/001_user_authentication.yaml
@@ -1,5 +1,36 @@
-name: "User Authentication"
-description: "Handles user authentication and authorization."
-tags:
-  - "security"
-  - "user"
+meta:
+  id: "security.UserAuthentication"
+  version: "0.1.0"
+  status: "draft"
+  authors: ["@stillrivercode"]
+
+keyword: "UserAuthentication"
+namespace: "security"
+brief: "Handles user authentication and authorization."
+tokens_saved: 10
+
+definition:
+  description: |
+    Provides a complete system for user authentication, including registration, login, logout, and session management.
+  parameters:
+    - name: "withOAuth"
+      type: "boolean"
+      required: false
+      default: false
+    - name: "withMFA"
+      type: "boolean"
+      required: false
+      default: false
+
+examples:
+  - input: "UserAuthentication"
+    expands_to: "Create a user authentication system with login, logout, and registration."
+  - input: "UserAuthentication[withOAuth=true, withMFA=true]"
+    expands_to: "Create a user authentication system with login, logout, registration, OAuth support, and multi-factor authentication."
+
+tests:
+  - description: "Ensures basic login functionality."
+    input: "UserAuthentication"
+    should_include: ["login", "logout", "register"]
+
+related: ["ApiGateway", "DatabaseSchema"]
