--- a/idks/010_testing_strategy.yaml
+++ b/idks/010_testing_strategy.yaml
@@ -1,5 +1,32 @@
-name: "Testing Strategy"
-description: "The strategy used for testing the application."
-tags:
-  - "testing"
-  - "quality"
+meta:
+  id: "quality.TestingStrategy"
+  version: "0.1.0"
+  status: "draft"
+  authors: ["@stillrivercode"]
+
+keyword: "TestingStrategy"
+namespace: "quality"
+brief: "The strategy used for testing the application."
+tokens_saved: 10
+
+definition:
+  description: |
+    Defines the overall testing strategy for the project, including unit tests, integration tests, and end-to-end tests.
+  parameters:
+    - name: "coverageTarget"
+      type: "integer"
+      required: false
+      default: 80
+
+examples:
+  - input: "TestingStrategy"
+    expands_to: "Define a testing strategy with a code coverage target of 80%."
+  - input: "TestingStrategy[coverageTarget=90]"
+    expands_to: "Define a testing strategy with a code coverage target of 90%."
+
+tests:
+  - description: "Ensures the testing framework is set up."
+    input: "TestingStrategy"
+    should_include: ["test", "framework", "assertion"]
+
+related: ["CicdPipeline"]
