fix: restrict workflow_dispatch to main branch only
Address AI review feedback by constraining manual trigger to only
allow releases from main branch. This prevents accidental releases
from feature branches and ensures consistent release process.

- Add branch input with choice type restricting to 'main' only
- Eliminates risk of incorrect versioning from wrong branch
- Maintains safety while providing manual trigger capability

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,14 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'The branch to run the release from'
+        required: true
+        type: choice
+        options:
+          - main
+        default: 'main'
 
 permissions:
   contents: write
