fix: update bin entry to enable default npx command
- Change bin from object to string to make package directly executable
- This allows 'npx @stillrivercode/information-dense-keywords' to work
- Previously required 'npx idk-install' which was confusing

--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   "bugs": {
     "url": "https://github.com/stillrivercode/idk/issues"
   },
-  "bin": {
-    "idk-install": "./bin/idk-install"
-  },
+  "bin": "./bin/idk-install",
   "files": [
     "information-dense-keywords.md",
     "README.md",
